--- a/permission/source/css/event.css
+++ b/permission/source/css/event.css
@@ -387,6 +387,7 @@ body {
 }
 
 .wrapper.permission_event footer button {
+  font-family: "NanumSquareB";
   width: 100%;
   height: 54px;
   font-size: 16px;
