--- a/permission/source/scss/event.scss
+++ b/permission/source/scss/event.scss
@@ -459,6 +459,7 @@ body {
       margin-top: 40px;
 
       button {
+        @include ftNanumSquare_B;
         width: 100%;
         height: 54px;
         font-size: 16px;
