--- a/source/css/common.css
+++ b/source/css/common.css
@@ -2,7 +2,7 @@
 /*-------------------------------------------------------------------------------------------------------------
     Explain : 포트폴리오
     File : common.scss
-    Date   : 2022.12.12
+    Date   : 2023.01.03
 /*------------------------------------------------------------------------------------------------------------*/
 /* z-inde 참고 */
 /* 높은 순으로 >> loadingBg(9999), modalLayout(999), modalDim(998),iBubble,Qmark,tootip(200), navigation(100), dimCircle,loadingCircle(100), tableHeaderFixed(1) etc */
@@ -990,6 +990,12 @@ html ::-webkit-scrollbar-track {
   background: transparent;
 }
 
+html body {
+  width: 100%;
+  height: 100%;
+  line-height: 1;
+}
+
 /******************** container_wrapper ********************/
 .wrapper {
   position: relative;
@@ -1028,6 +1034,7 @@ header h1 {
 
 header h1 a {
   font-family: "RixInooAriDuri_R";
+  position: relative;
   font-size: 28px;
   color: #000;
   display: block;
@@ -1041,10 +1048,10 @@ header h1 a:before {
 
 header h1 a:after {
   content: "";
-  position: relative;
+  position: absolute;
   display: inline-block;
-  top: -22px;
-  left: 2px;
+  top: -8px;
+  right: -8px;
   width: 7px;
   height: 7px;
   border-radius: 2px;
@@ -1085,6 +1092,10 @@ header .mainNav ul li {
 
 header .mainNav ul li:first-child {
   margin-left: 0;
+}
+
+header .mainNav ul li:hover a {
+  color: #b73748;
 }
 
 header .mainNav ul li a {
@@ -1408,6 +1419,16 @@ header.headerWt:hover .mainNav ul li:hover a {
   font-size: 18px;
 }
 
+.container .content {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  -ms-touch-action: none;
+      touch-action: none;
+  -webkit-transition: all 700ms ease 0s;
+  transition: all 700ms ease 0s;
+}
+
 .container .content > section {
   position: relative;
   width: 100%;
@@ -1418,10 +1439,116 @@ header.headerWt:hover .mainNav ul li:hover a {
   border-radius: 5px;
   margin: 0px;
   border: 1px solid #eee;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  height: 100vh;
+  overflow: hidden;
+  color: #000;
 }
 
 .container .content > section:first-child {
   margin-top: 0;
+}
+
+.container .dot {
+  position: absolute;
+  top: 13%;
+  right: 80px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.container .dot ul li {
+  position: relative;
+  font-size: 0;
+  width: 16px;
+  height: 16px;
+  margin: 50px auto;
+}
+
+.container .dot ul li.active {
+  width: 16px;
+  height: 16px;
+}
+
+.container .dot ul li.active:before {
+  opacity: 1;
+}
+
+.container .dot ul li.active:after {
+  background-color: #b73748;
+}
+
+.container .dot ul li:active:after {
+  background-color: #b73748;
+}
+
+.container .dot ul li:hover:before {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.container .dot ul li:hover:after {
+  width: 16px;
+  height: 16px;
+}
+
+.container .dot ul li:before {
+  position: absolute;
+  display: inline-block;
+  top: 50%;
+  left: -130px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 99px;
+  height: 36px;
+  color: #fff;
+  border-radius: 36px;
+  text-align: center;
+  line-height: 36px;
+  font-size: 12px;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  opacity: 0;
+  background-color: #b73748;
+}
+
+.container .dot ul li:before::hover {
+  width: 16px;
+  height: 16px;
+  opacity: 1;
+  cursor: pointer;
+}
+
+.container .dot ul li:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: #222;
+  background-color: #fff;
+}
+
+.container .dot ul li:nth-child(1):before {
+  content: "MAIN";
+}
+
+.container .dot ul li:nth-child(2):before {
+  content: "About Me";
+}
+
+.container .dot ul li:nth-child(3):before {
+  content: "Work";
+}
+
+.container .dot ul li:nth-child(4):before {
+  content: "Contact";
 }
 
 /********** footer ***********/
@@ -1510,22 +1637,11 @@ footer .footer div.address {
 /********** externalManage common css **********/
 /********** externalManage each css **********/
 .container {
-  /* 현황관리 */
+  /* 손졔 포트폴리오 */
 }
 
 .container.sonjye_index .title {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.container.sonjye_index .title .calendarBox {
-  position: absolute;
-  top: -10px;
-  right: 0;
+  display: none;
 }
 
 .container.sonjye_index .content section {
@@ -1629,6 +1745,16 @@ footer .footer div.address {
   font-size: 6.75rem;
 }
 
+.container.sonjye_index .content section.sec_intro .tit p:first-child:before {
+  content: "PORTPOLIO";
+  position: absolute;
+  display: inline-block;
+  font-size: 139px;
+  font-size: 8.625rem;
+  color: #000;
+  z-index: -1;
+}
+
 .container.sonjye_index .content section.sec_intro .tit p:nth-child(2) {
   font-family: "RixInooAriDuri_R";
   margin-top: 20px;
@@ -1647,6 +1773,8 @@ footer .footer div.address {
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
   padding: 140px 80px 80px 40px;
+  padding: 1.875rem 100px;
+  padding: 200px 100px 40px;
 }
 
 .container.sonjye_index .content section.sec_aboutMe .box_aboutMe {
@@ -1657,26 +1785,21 @@ footer .footer div.address {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 25%;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
 }
 
 .container.sonjye_index .content section.sec_aboutMe .box_aboutMe .tit {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-  margin: 0 auto;
 }
 
 .container.sonjye_index .content section.sec_aboutMe .box_aboutMe .tit:before {
-  width: 563px;
-  height: 541px;
-  background: url("../img/test/dog-1.jpg") center center no-repeat;
+  background: url("../image/content/universe_4.jpg") no-repeat;
+  background-position-x: center;
+  background-position-y: center;
   content: "";
   display: block;
   width: 300px;
@@ -1686,7 +1809,9 @@ footer .footer div.address {
   background-size: cover;
   border-radius: 100%;
   border-radius: 15px;
-  background-position: left center;
+  background-position: center center;
+  background-size: auto;
+  background-size: 170%;
 }
 
 .container.sonjye_index .content section.sec_aboutMe .box_aboutMe .tit p {
@@ -1697,7 +1822,7 @@ footer .footer div.address {
   line-height: 1.3;
   vertical-align: middle;
   letter-spacing: -2px;
-  text-indent: 20px;
+  text-indent: 4px;
 }
 
 .container.sonjye_index .content section.sec_aboutMe .box_aboutMe .tit p:last-child:after {
@@ -1709,7 +1834,7 @@ footer .footer div.address {
 
 .container.sonjye_index .content section.sec_aboutMe .box_aboutMe .cont {
   min-width: 300px;
-  margin: 60px auto 0;
+  margin: 60px 0 0 0;
   padding: 0 0 0 6px;
 }
 
@@ -1741,7 +1866,7 @@ footer .footer div.address {
 }
 
 .container.sonjye_index .content section.sec_aboutMe .box_aboutMe .cont .contBox {
-  margin-top: 20px;
+  margin-top: 15px;
 }
 
 .container.sonjye_index .content section.sec_aboutMe .box_aboutMe .cont .contBox p {
@@ -1761,7 +1886,6 @@ footer .footer div.address {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  width: 67%;
   margin: 0 0 0 8%;
 }
 
@@ -1771,6 +1895,7 @@ footer .footer div.address {
 
 .container.sonjye_index .content section.sec_aboutMe .box_career .tit p {
   font-family: "NanumSR_EB";
+  font-family: "NotoSansB";
   position: relative;
   font-size: 36px;
   z-index: 1;
@@ -1784,7 +1909,6 @@ footer .footer div.address {
   height: 18px;
   bottom: -4px;
   left: -10px;
-  background-color: #ffdd6b;
   -webkit-transform: skew(-20deg);
   opacity: 0.7;
   z-index: -1;
@@ -1796,26 +1920,34 @@ footer .footer div.address {
   display: grid;
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
-  row-gap: 10px;
-  -webkit-column-gap: 20px;
-          column-gap: 20px;
+  row-gap: 20px;
+  -webkit-column-gap: 80px;
+          column-gap: 80px;
 }
 
 .container.sonjye_index .content section.sec_aboutMe .box_career .cont > div:nth-child(2n) {
-  margin-top: 40px;
+  margin-top: 20px;
+}
+
+.container.sonjye_index .content section.sec_aboutMe .box_career .cont .titBox {
+  padding-bottom: 10px;
+  border-bottom: 2px solid #f5f5f5;
 }
 
 .container.sonjye_index .content section.sec_aboutMe .box_career .cont .titBox p {
+  font-family: "MaruBuri_B";
   font-family: "NanumSR_EB";
+  color: #b73748;
   font-size: 20px;
 }
 
 .container.sonjye_index .content section.sec_aboutMe .box_career .cont .contBox {
   margin-top: 20px;
+  padding: 0 10px;
 }
 
 .container.sonjye_index .content section.sec_aboutMe .box_career .cont .contBox > div {
-  margin-top: 12px;
+  margin-top: 10px;
 }
 
 .container.sonjye_index .content section.sec_aboutMe .box_career .cont .contBox > div:first-child {
@@ -1823,13 +1955,16 @@ footer .footer div.address {
 }
 
 .container.sonjye_index .content section.sec_aboutMe .box_career .cont .contBox > div p {
+  display: inline-block;
   font-size: 14px;
   color: #666;
   line-height: 1.5;
 }
 
 .container.sonjye_index .content section.sec_aboutMe .box_career .cont .contBox > div p:nth-child(1) {
+  margin-right: 20px;
   color: #222;
+  color: #000;
   font-size: 15px;
 }
 
@@ -1847,7 +1982,7 @@ footer .footer div.address {
   -ms-grid-row: 2;
   -ms-grid-row-span: 3;
   grid-row: 2/5;
-  margin-top: 40px;
+  margin-top: 20px;
 }
 
 .container.sonjye_index .content section.sec_aboutMe .box_career .cont > div.certificate {
@@ -1869,13 +2004,17 @@ footer .footer div.address {
 }
 
 .container.sonjye_index .content section.sec_aboutMe .box_career .cont > div.skills {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-column: 2/3;
-  -ms-grid-row: 4;
-  -ms-grid-row-span: 1;
-  grid-row: 4/5;
-  margin-top: 40px;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
+  -ms-grid-row: 5;
+  grid-row: 5/5;
+  margin-top: 20px;
+}
+
+.container.sonjye_index .content section.sec_aboutMe .box_career .cont > div.skills .titBox p span {
+  color: #666;
+  font-size: 14px;
 }
 
 .container.sonjye_index .content section.sec_aboutMe .box_career .cont > div.skills .contBox {
@@ -1887,7 +2026,7 @@ footer .footer div.address {
   font-size: 14px;
 }
 
-.container.sonjye_index .content section.sec_aboutMe .box_career .cont > div.skills .contBox > div:nth-child(2) {
+.container.sonjye_index .content section.sec_aboutMe .box_career .cont > div.skills .contBox > div:nth-child(1) {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1896,196 +2035,19 @@ footer .footer div.address {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  margin-top: 20px;
+  margin-top: 15px;
 }
 
-.container.sonjye_index .content section.sec_aboutMe .box_career .cont > div.skills .contBox > div:nth-child(2) p {
+.container.sonjye_index .content section.sec_aboutMe .box_career .cont > div.skills .contBox > div:nth-child(1) p {
   display: inline-block;
   margin: 0 10px 10px 0;
   padding: 4px 10px;
   color: #222;
+  color: #fff;
   font-size: 16px;
   border-radius: 4px;
   background-color: #fffacd;
-}
-
-.container.sonjye_index .content section.sec_aboutMe .box_career {
-  display: none;
-}
-
-.container.sonjye_index .content section.sec_aboutMe .box_career + .box_career {
-  -webkit-box-flex: flex;
-      -ms-flex: flex;
-          flex: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  width: 62%;
-  margin: 0 0 0 8%;
-}
-
-.container.sonjye_index .content section.sec_aboutMe .box_career + .box_career .tit {
-  position: relative;
-}
-
-.container.sonjye_index .content section.sec_aboutMe .box_career + .box_career .tit p {
-  font-family: "NanumSR_EB";
-  position: relative;
-  font-size: 36px;
-  z-index: 1;
-}
-
-.container.sonjye_index .content section.sec_aboutMe .box_career + .box_career .tit p:before {
-  content: "";
-  position: absolute;
-  display: inline-block;
-  width: 190px;
-  height: 18px;
-  bottom: -4px;
-  left: -10px;
-  background-color: #ffdd6b;
-  -webkit-transform: skew(-20deg);
-  opacity: 0.7;
-  z-index: -1;
-}
-
-.container.sonjye_index .content section.sec_aboutMe .box_career + .box_career .cont {
-  margin: 80px auto 0;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
-  row-gap: 20px;
-  -webkit-column-gap: 80px;
-          column-gap: 80px;
-}
-
-.container.sonjye_index .content section.sec_aboutMe .box_career + .box_career .cont > div:nth-child(2n) {
-  margin-top: 40px;
-}
-
-.container.sonjye_index .content section.sec_aboutMe .box_career + .box_career .cont .titBox {
-  padding-bottom: 10px;
-  border-bottom: 2px solid #f5f5f5;
-}
-
-.container.sonjye_index .content section.sec_aboutMe .box_career + .box_career .cont .titBox p {
-  font-family: "MaruBuri_B";
-  font-family: "NanumSR_EB";
-  color: #b73748;
-  font-size: 20px;
-}
-
-.container.sonjye_index .content section.sec_aboutMe .box_career + .box_career .cont .contBox {
-  margin-top: 20px;
-  padding: 0 10px;
-}
-
-.container.sonjye_index .content section.sec_aboutMe .box_career + .box_career .cont .contBox > div {
-  margin-top: 10px;
-}
-
-.container.sonjye_index .content section.sec_aboutMe .box_career + .box_career .cont .contBox > div:first-child {
-  margin-top: 0;
-}
-
-.container.sonjye_index .content section.sec_aboutMe .box_career + .box_career .cont .contBox > div p {
-  display: inline-block;
-  font-size: 14px;
-  color: #666;
-  line-height: 1.5;
-}
-
-.container.sonjye_index .content section.sec_aboutMe .box_career + .box_career .cont .contBox > div p:nth-child(1) {
-  margin-right: 20px;
-  color: #222;
-  color: #000;
-  font-size: 15px;
-}
-
-.container.sonjye_index .content section.sec_aboutMe .box_career + .box_career .cont > div.career {
-  -ms-grid-column: 1;
-  grid-column: 1/1;
-  -ms-grid-row: 1;
-  grid-row: 1/1;
-}
-
-.container.sonjye_index .content section.sec_aboutMe .box_career + .box_career .cont > div.educate {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
-  grid-column: 1/2;
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 3;
-  grid-row: 2/5;
-  margin-top: 40px;
-}
-
-.container.sonjye_index .content section.sec_aboutMe .box_career + .box_career .cont > div.certificate {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-column: 2/3;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  grid-row: 1/2;
-}
-
-.container.sonjye_index .content section.sec_aboutMe .box_career + .box_career .cont > div.levelEducate {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-column: 2/3;
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 2;
-  grid-row: 2/4;
-}
-
-.container.sonjye_index .content section.sec_aboutMe .box_career + .box_career .cont > div.skills {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-column: 1/3;
-  -ms-grid-row: 5;
-  grid-row: 5/5;
-  margin-top: 40px;
-}
-
-.container.sonjye_index .content section.sec_aboutMe .box_career + .box_career .cont > div.skills .titBox p span {
-  color: #666;
-  font-size: 14px;
-}
-
-.container.sonjye_index .content section.sec_aboutMe .box_career + .box_career .cont > div.skills .contBox {
-  margin-top: 5px;
-}
-
-.container.sonjye_index .content section.sec_aboutMe .box_career + .box_career .cont > div.skills .contBox > div:nth-child(1) p {
-  color: #666;
-  font-size: 14px;
-}
-
-.container.sonjye_index .content section.sec_aboutMe .box_career + .box_career .cont > div.skills .contBox > div:nth-child(1) {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  margin-top: 20px;
-}
-
-.container.sonjye_index .content section.sec_aboutMe .box_career + .box_career .cont > div.skills .contBox > div:nth-child(1) p {
-  display: inline-block;
-  margin: 0 10px 10px 0;
-  padding: 4px 10px;
-  color: #222;
-  font-size: 16px;
-  border-radius: 4px;
-  background-color: #fffacd;
+  background-color: #231f2d;
 }
 
 .container.sonjye_index .content section.sec_project {
