--- a/source/scss/index.scss
+++ b/source/scss/index.scss
@@ -16,17 +16,10 @@
 /********** externalManage each css **********/
 .container {
 
-  /* 현황관리 */
+  /* 손졔 포트폴리오 */
   &.sonjye_index {
     .title {
-      display: flex;
-      justify-content: space-between;
-
-      .calendarBox {
-        position: absolute;
-        top: -10px;
-        right: 0;
-      }
+      display: none;
     }
 
     .content {
@@ -76,8 +69,6 @@
             right: 0;
             background: url("../image/content/bg_universe.png") no-repeat;
             background-position: 95% 100%;
-
-
           }
 
           .tit {
@@ -113,6 +104,16 @@
                   font-size: 108px;
                   font-size: 6.75rem;
                 }
+
+                &:before {
+                  content: "PORTPOLIO";
+                  position: absolute;
+                  display: inline-block;
+                  font-size: 139px;
+                  font-size: 8.625rem;
+                  color: #000;
+                  z-index: -1;
+                }
               }
 
               &:nth-child(2) {
@@ -132,18 +133,20 @@
           display: flex;
           justify-content: space-evenly;
           padding: 140px 80px 80px 40px;
+          padding: 1.875rem 100px;
+          padding: 200px 100px 40px;
 
 
           .box_aboutMe {
             display: flex;
             flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            width: 25%;
+            justify-content: start;
+            // align-items: center;
+            // width: 25%;
 
             .tit {
               width: fit-content;
-              margin: 0 auto;
+              // margin: 0 auto;
 
               &:before {
                 @include img_me;
@@ -156,7 +159,9 @@
                 background-size: cover;
                 border-radius: 100%;
                 border-radius: 15px;
-                background-position: left center;
+                background-position: center center;
+                background-size: auto;
+                background-size: 170%;
               }
 
               p {
@@ -168,7 +173,7 @@
                 line-height: 1.3;
                 vertical-align: middle;
                 letter-spacing: -2px;
-                text-indent: 20px;
+                text-indent: 4px;
 
                 &:last-child {
                   &:after {
@@ -184,7 +189,7 @@
 
             .cont {
               min-width: 300px;
-              margin: 60px auto 0;
+              margin: 60px 0 0 0;
               padding: 0 0 0 6px;
 
               &:before {
@@ -219,7 +224,7 @@
               }
 
               .contBox {
-                margin-top: 20px;
+                margin-top: 15px;
 
                 p {
                   // @include ft_Maruburi_R;
@@ -239,7 +244,7 @@
             flex-wrap: wrap;
             flex-grow: 1;
             justify-content: space-between;
-            width: 67%;
+            // width: 62%;
             margin: 0 0 0 8%;
 
             .tit {
@@ -249,6 +254,7 @@
                 // @include ftBold;
                 // @include ft_Maruburi_B;
                 @include ft_nanumSR_EB;
+                @include ftBold;
                 // @include ft_Gangwon_B;
                 position: relative;
                 font-size: 36px;
@@ -262,166 +268,7 @@
                   height: 18px;
                   bottom: -4px;
                   left: -10px;
-                  background-color: #ffdd6b;
-                  -webkit-transform: skew(-20deg);
-                  opacity: 0.7;
-                  z-index: -1;
-                }
-              }
-            }
-
-            .cont {
-              margin: 80px auto 0;
-              display: grid;
-              grid-template-columns: 1fr 1fr;
-              row-gap: 10px;
-              column-gap: 20px;
-
-              >div {
-                &:nth-child(2n) {
-                  margin-top: 40px;
-                }
-              }
-
-              .titBox {
-                p {
-                  @include ft_nanumSR_EB;
-                  font-size: 20px;
-                }
-              }
-
-              .contBox {
-                margin-top: 20px;
-
-                >div {
-                  margin-top: 12px;
-
-                  &:first-child {
-                    margin-top: 0;
-
-                    p {
-                      // @include ft_Maruburi_R;
-                    }
-                  }
-
-                  p {
-                    // @include ftMedium;
-                    // @include ft_NanumSR_R;
-                    font-size: 14px;
-                    color: #666;
-                    line-height: 1.5;
-
-                    &:nth-child(1) {
-                      color: #222;
-                      font-size: 15px;
-                    }
-
-                    &:nth-child(2) {
-                      // @include ft_Maruburi_R;
-                    }
-                  }
-                }
-              }
-
-              >div {
-
-                &.career {
-                  grid-column: 1/1;
-                  grid-row: 1/1;
-                }
-
-                &.educate {
-                  grid-column: 1/2;
-                  grid-row: 2/5;
-                  margin-top: 40px;
-                }
-
-                &.certificate {
-                  grid-column: 2/3;
-                  grid-row: 1/2;
-                }
-
-                &.levelEducate {
-                  grid-column: 2/3;
-                  grid-row: 2/4;
-                }
-
-                &.skills {
-                  grid-column: 2/3;
-                  grid-row: 4/5;
-                  margin-top: 40px;
-
-                  .contBox {
-                    margin-top: 5px;
-
-                    >div {
-                      &:nth-child(1) {
-                        p {
-                          // @include ft_Maruburi_R;
-                          color: #666;
-                          font-size: 14px;
-                        }
-                      }
-
-                      &:nth-child(2) {
-                        display: flex;
-                        flex-wrap: wrap;
-                        justify-content: flex-start;
-                        margin-top: 20px;
-
-                        p {
-                          // @include ft_Maruburi_R;
-                          display: inline-block;
-                          margin: 0 10px 10px 0;
-                          padding: 4px 10px;
-                          color: #222;
-                          font-size: 16px;
-                          border-radius: 4px;
-                          background-color: #fffacd;
-
-                          &:first-child {}
-                        }
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          }
-
-          .box_career {
-            display: none;
-          }
-
-          .box_career+.box_career {
-            flex: flex;
-            flex-wrap: wrap;
-            flex-grow: 1;
-            justify-content: space-between;
-            width: 62%;
-            margin: 0 0 0 8%;
-
-            .tit {
-              position: relative;
-
-              p {
-                // @include ftBold;
-                // @include ft_Maruburi_B;
-                @include ft_nanumSR_EB;
-                // @include ft_Gangwon_B;
-                position: relative;
-                font-size: 36px;
-                z-index: 1;
-
-                &:before {
-                  content: "";
-                  position: absolute;
-                  display: inline-block;
-                  width: 190px;
-                  height: 18px;
-                  bottom: -4px;
-                  left: -10px;
-                  background-color: #ffdd6b;
+                  // background-color: #ffdd6b;
                   -webkit-transform: skew(-20deg);
                   opacity: 0.7;
                   z-index: -1;
@@ -438,7 +285,7 @@
 
               >div {
                 &:nth-child(2n) {
-                  margin-top: 40px;
+                  margin-top: 20px;
                 }
               }
 
@@ -494,14 +341,12 @@
                 &.career {
                   grid-column: 1/1;
                   grid-row: 1/1;
-
-
                 }
 
                 &.educate {
                   grid-column: 1/2;
                   grid-row: 2/5;
-                  margin-top: 40px;
+                  margin-top: 20px;
                 }
 
                 &.certificate {
@@ -517,7 +362,7 @@
                 &.skills {
                   grid-column: 1/3;
                   grid-row: 5/5;
-                  margin-top: 40px;
+                  margin-top: 20px;
 
                   .titBox {
                     p {
@@ -544,7 +389,7 @@
                         display: flex;
                         flex-wrap: wrap;
                         justify-content: flex-start;
-                        margin-top: 20px;
+                        margin-top: 15px;
 
                         p {
                           // @include ft_Maruburi_R;
@@ -552,9 +397,11 @@
                           margin: 0 10px 10px 0;
                           padding: 4px 10px;
                           color: #222;
+                          color: #fff;
                           font-size: 16px;
                           border-radius: 4px;
                           background-color: #fffacd;
+                          background-color: #231f2d;
 
                           &:first-child {}
                         }
