--- a/source/scss/component.scss
+++ b/source/scss/component.scss
@@ -281,9 +281,9 @@ $downColor: #2e7ce1;
   padding: 1.875rem;
   padding: 1.875rem 100px;
   // box-shadow: 0.8px 0.6px 5px 0 rgba(0, 0, 0, 0.15);
-  border-radius: 5px;
+  // border-radius: 5px;
   margin: $mg;
-  border: 1px solid #eee;
+  // border: 1px solid #eee;
 }
 
 @mixin secLayout_t2($pd:20px, $mg:30px 0 0 0) {
