--- a/source/scss/sub.scss
+++ b/source/scss/sub.scss
@@ -7,54 +7,11 @@
 
 .wrapper {
 
-  &.sonjye_sub {
-    .subNav {
-      position: absolute;
-      width: 250px;
-      margin: 0px 0 0 80px;
-
-      ul {
-        li {
-          position: relative;
-          margin: 35px 0 0 0;
-
-          &:first-child {
-            margin-top: 0;
-          }
-
-          a {
-            @include ftBold;
-            position: relative;
-            display: inline-block;
-            width: 100%;
-            height: 100%;
-            padding: 10px 20px;
-            font-size: 18px;
-            color: $subFontColor_whiteGray;
-          }
-
-          &.on {
-            a {
-              color: $fontColor;
-
-              &:before {
-                @include txtDot_t2;
-              }
-            }
-          }
-
-          &:hover {
-            a {
-              color: $pointColor;
-            }
-          }
-        }
-      }
-    }
-
+  /* 모비튠 SUB */
+  &.sonjye_tuneSub {
     .container {
-      margin: 300px 0 0 480px;
       width: calc(100% - 480px);
+      margin: 300px 0 0 480px;
     }
 
     .title {
@@ -62,9 +19,6 @@
       border-bottom: 1px solid #e6e6e6;
 
       p {
-        @include ft_rix_R;
-        @include ft_maruburi_B;
-        @include ft_nanumSR_B;
         @include ftBold;
         letter-spacing: -1.8px;
         font-size: 60px;
@@ -166,7 +120,7 @@
               display: none;
               position: relative;
               width: 1080px;
-              height: 100%;
+              height: 1800px;
               font-size: 0;
 
               &.show {
@@ -180,24 +134,185 @@
 
               &:nth-child(1) {
                 @include img_mobtune_rfmAnalysis;
-                width: 1080px;
-                height: 1800px;
                 background-size: contain;
                 background-position-y: top;
               }
 
               &:nth-child(2) {
                 @include img_mobtune_campaignList;
-                width: 1080px;
-                height: 1000px;
                 background-size: contain;
                 background-position-y: top;
               }
 
               &:nth-child(3) {
                 @include img_mobtune_userInfo;
-                width: 1080px;
-                height: 1000px;
+                background-size: contain;
+                background-position-y: top;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  /* 남양 SUB */
+  &.sonjye_abmSub {
+    .container {
+      width: calc(100% - 480px);
+      margin: 300px 0 0 480px;
+    }
+
+    .title {
+      padding-bottom: 20px;
+      border-bottom: 1px solid #e6e6e6;
+
+      p {
+        @include ftBold;
+        letter-spacing: -1.8px;
+        font-size: 60px;
+        animation: textAni 1s ease forwards;
+      }
+
+      .category {
+        margin-top: 80px;
+
+        ul {
+          li {
+            display: inline-block;
+            margin-left: 40px;
+
+            &:first-child {
+              margin-left: 0;
+            }
+
+            a {
+              @include ftBold;
+              padding: 10px;
+              font-size: 24px;
+              color: $subFontColor_whiteGray;
+            }
+
+            &.on {
+              a {
+                color: $pointColor;
+              }
+            }
+
+            &:hover {
+              a {
+                color: $pointColor;
+              }
+            }
+
+            &:first-child {
+              a {
+                padding-left: 0;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .content {
+      margin-top: 100px;
+
+      section {
+        min-height: 100vh;
+        height: auto;
+
+        ::-webkit-scrollbar {
+          @include scrollbar;
+        }
+
+        ::-webkit-scrollbar-thumb {
+          @include scrollbar-thumb;
+        }
+
+        &.sec_mobtune {
+          margin-bottom: 200px;
+          padding: 0;
+
+          .descriptionBox {
+
+            p {
+              &:first-child {
+                font-size: 54px;
+                line-height: 80px;
+
+                strong {
+                  @include ftBold;
+                  display: block;
+                }
+              }
+
+              &:nth-child(2) {
+                margin-top: 60px;
+                line-height: 1.5;
+                font-size: 36px;
+                color: #aaa;
+
+                strong {
+                  @include ftBold;
+                  margin: 0 2px;
+                  color: $fontColor;
+                }
+              }
+            }
+          }
+
+          .categoryList {
+            margin-top: 100px;
+
+            >div {
+              display: none;
+              position: relative;
+              width: 1080px;
+              height: 1800px;
+              font-size: 0;
+
+              &.show {
+                display: block;
+              }
+
+              img {
+                width: 100%;
+                height: 100%;
+              }
+
+              &:nth-child(1) {
+                @include img_abm_dashboard;
+                background-size: contain;
+                background-position-y: top;
+              }
+
+              &:nth-child(2) {
+                @include img_abm_login;
+                background-size: contain;
+                background-position-y: top;
+              }
+
+              &:nth-child(3) {
+                @include img_abm_dmp;
+                background-size: contain;
+                background-position-y: top;
+              }
+
+              &:nth-child(4) {
+                @include img_abm_userAnalysis;
+                background-size: contain;
+                background-position-y: top;
+              }
+
+              &:nth-child(5) {
+                @include img_abm_campaignSet;
+                background-size: contain;
+                background-position-y: top;
+              }
+
+              &:nth-child(6) {
+                @include img_abm_cmpDashboard;
                 background-size: contain;
                 background-position-y: top;
               }
