--- a/source/css/common.css
+++ b/source/css/common.css
@@ -403,6 +403,68 @@ animation
   }
 }
 
+/*
+ animation-name: dowmUp;
+*/
+@-webkit-keyframes dowmUp {
+  0% {
+    opacity: 0;
+    transform: translateY(50px);
+    -webkit-transform: translateY(50px);
+    -moz-transform: translateY(50px);
+    -ms-transform: translateY(50px);
+    -o-transform: translateY(50px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+@keyframes dowmUp {
+  0% {
+    opacity: 0;
+    transform: translateY(50px);
+    -webkit-transform: translateY(50px);
+    -moz-transform: translateY(50px);
+    -ms-transform: translateY(50px);
+    -o-transform: translateY(50px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+/*
+animation-name: move;
+animation-duration: 3s;
+animation-iteration-count: infinite;
+*/
+@-webkit-keyframes move {
+  0% {
+    top: 0;
+  }
+  50% {
+    top: 15px;
+  }
+  100% {
+    top: 0;
+  }
+}
+@keyframes move {
+  0% {
+    top: 0;
+  }
+  50% {
+    top: 15px;
+  }
+  100% {
+    top: 0;
+  }
+}
+
 /* 
 font 
 */
@@ -1048,30 +1110,6 @@ footer .footer div.address {
   background-color: #f5f5f5;
   padding-top: 100px;
   background-color: #231f2d;
-}
-
-@-webkit-keyframes move {
-  0% {
-    top: 0;
-  }
-  50% {
-    top: 15px;
-  }
-  100% {
-    top: 0;
-  }
-}
-
-@keyframes move {
-  0% {
-    top: 0;
-  }
-  50% {
-    top: 15px;
-  }
-  100% {
-    top: 0;
-  }
 }
 
 .wrapper.sonjye_index .content section.sec_intro:before {
@@ -1796,11 +1834,17 @@ footer .footer div.address {
 }
 
 .wrapper.sonjye_tuneSub .title p {
+  -webkit-animation-name: dowmUp;
+          animation-name: dowmUp;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
   font-family: "NotoSansB";
   letter-spacing: -1.8px;
   font-size: 60px;
-  -webkit-animation: textAni 1s ease forwards;
-          animation: textAni 1s ease forwards;
 }
 
 .wrapper.sonjye_tuneSub .title .category {
