--- a/source/scss/sub.scss
+++ b/source/scss/sub.scss
@@ -19,10 +19,10 @@
       border-bottom: 1px solid #e6e6e6;
 
       p {
+        @include ani_downUp;
         @include ftBold;
         letter-spacing: -1.8px;
         font-size: 60px;
-        animation: textAni 1s ease forwards;
       }
 
       .category {
